--- a/m8_머신러닝적용/ML_텍스트 처리_네이버 영화 감성분석.ipynb
+++ b/m8_머신러닝적용/ML_텍스트 처리_네이버 영화 감성분석.ipynb
@@ -247,7 +247,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7d94338c",
+   "id": "7f2f69c9",
    "metadata": {},
    "source": [
     "### 텍스트 전처리 순서\n",
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "002e85d6",
    "metadata": {},
    "outputs": [
@@ -292,6 +292,40 @@
    "outputs": [],
    "source": [
     "# [과제] lr으로 모델링 및 하이퍼 파라미터 튜닝후 테스트 데이터로 평가하세요."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01967882",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import accuracy_score, roc_auc_score\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import re\n",
+    "\n",
+    "# <br> 태그를 공백으로, 영어 아닌 문자는 삭제\n",
+    "review_df['review'] = review_df['review'].str.replace('<br />',' ') \n",
+    "review_df['review'] = review_df['review'].apply( lambda x : re.sub(\"[^a-zA-Z]\", \" \", x) )\n",
+    "\n",
+    "X = review_df.drop(['id','sentiment'], axis=1, inplace=False)\n",
+    "y = review_df['sentiment']\n",
+    "X_train, X_test, y_train, y_test= train_test_split(X, y, test_size=0.3, random_state=156)\n",
+    "\n",
+    "pipeline = Pipeline([\n",
+    "    ('cnt_vect', TfidfVectorizer(stop_words='english', ngram_range=(1,2))),\n",
+    "    ('lr_clf', LogisticRegression(C=10))])\n",
+    "\n",
+    "# Pipeline 객체를 이용하여 학습 및 예측 후 평가\n",
+    "pipeline.fit(X_train['review'], y_train)\n",
+    "pred = pipeline.predict(X_test['review'])\n",
+    "pred_proba = pipeline.predict_proba(X_test['review'])[:,1]\n",
+    "\n",
+    "print('accuracy: {0:.3f}, ROC-AUC: {1:.3f}'.format(accuracy_score(y_test ,pred), roc_auc_score(y_test, pred_proba)))                                  "
    ]
   }
  ],
