--- a/m8_머신러닝적용/ML_추천_아이템 기반 최근접 이웃.ipynb
+++ b/m8_머신러닝적용/ML_추천_아이템 기반 최근접 이웃.ipynb
@@ -6,13 +6,14 @@
    "metadata": {},
    "source": [
     " ### 협업 필터링\n",
-    "- 협업 필터링은 사용자 또는 아이템(컨텐츠) 기반인 최근접 이웃 필터링과 잠재(Latent)요인 기반 필터링으로 나뉘어 진다. 그러므로 각 개념을 설명하면서 코드로 구현하는 방법 순으로 전개된다. 목차는 다음과 같다.\n",
-    " \n",
-    "1. 협업 필터링의 종류\n",
-    "2. 최근접 이웃(Nearest-Neighbor) 기반 필터링\n",
-    "3 최근접 이웃 기반 필터링 구현하기\n",
-    "4. 잠재(Latent)요인 기반 필터링\n",
-    "5. 잠재요인 기반 필터링 구현하기"
+    "- 협업 필터링은 사용자 또는 아이템(컨텐츠) 기반인 최근접 이웃 필터링과 잠재(Latent)요인 기반 필터링으로 나뉘어 진다. \n",
+    "\n",
+    "##### 최근접 이웃 기반 필터링 \n",
+    "- 사용자 - 사용자 기반 추천 방식 : 특정 사용자와 비슷한 고객들을 기반으로 이 비슷한 고객들이 선호하는 다른 상품을 특정 사용자에게 추천한다. 현실세계에서 \"당신과 비슷한 고객들이 다음 상품도 구매했습니다.\" 라는 문구가 대표적인 예시가 되겠다.<br><br>\n",
+    "- 아이템 - 아이템 기반 추천 방식 : 특정 상품과 유사하며 좋은 평가를 받은 다른 비슷한 상품을 추천한다. 즉, 사용자들로부터 특정 상품과 비슷한 평가를 받은 상품들을 비슷한 상품으로 간주한다. 현실세계에서 \"이 상품을 선택한 다른 고객들은 다음 상품도 구매했습니다\" 라는 문구가 대표적인 예시이다.<br><br>\n",
+    "\n",
+    "##### 잠재요인 기반 필터링 \n",
+    "- 사용자-아이템 평점 행렬 속에 숨어 있는 잠재(latent)요인을 추출해 추천 예측을 하는 기법이다. 잠재 요인을 추출하기 때문에 SVD와 같은 행렬분해 기법을 사용한다."
    ]
   },
   {
