--- a/m8_머신러닝적용/ML_텍스트 분류 실습_20뉴스그룹 분류.ipynb
+++ b/m8_머신러닝적용/ML_텍스트 분류 실습_20뉴스그룹 분류.ipynb
@@ -309,7 +309,7 @@
     "tfidf_vect = TfidfVectorizer()\n",
     "tfidf_vect.fit(X_train)\n",
     "X_train_tfidf_vect = tfidf_vect.transform(X_train)\n",
-    "X_test_tfidf_vect = tfidf_vect.transform(X_test)\n",
+    "X_test_tfidf_vect = tfidf_vect.transform(X_test) # 여기서만 X_train이 아닌 X_test로 반드시 넣어줘야함 \n",
     "\n",
     "# LogisticRegression을 이용하여 학습/예측/평가 수행\n",
     "lr_clf = LogisticRegression()\n",
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "80f6e5a9",
    "metadata": {},
    "outputs": [
@@ -405,10 +405,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x211ec4853a0>"
+       "<matplotlib.legend.Legend at 0x18ab95a8fd0>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     },
