--- a/m8_머신러닝적용/Ml_텍스트 분석_IMDB 영화평.ipynb
+++ b/m8_머신러닝적용/Ml_텍스트 분석_IMDB 영화평.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "9f74d3bc",
    "metadata": {},
    "outputs": [
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "id": "27d015dd",
    "metadata": {},
    "outputs": [],
@@ -150,15 +150,13 @@
     "# <br> html 태그는 replace 함수로 공백으로 변환\n",
     "review_df['review'] = review_df['review'].str.replace('<br />', ' ')\n",
     "\n",
-    "# 파이썬의 re 모듈을 이용해 영어 문자열이 아닌 문자는 모두 공백으로 변환\n",
-    "review_df['review'] = review_df['review'].apply(lambda x : re.sub(\"[^a-zA-Z]\", \" \", x))\n",
-    "\n",
-    "# [^a-zA-Z] 는 영어 대/소문자가 아닌 모든 문자를 찾는 정규 표현식"
+    "# 정규표현식을 이용 영어 대/소문자가 아닌 모든 문자를 찾아 공백으로 변환\n",
+    "review_df['review'] = review_df['review'].apply(lambda x : re.sub(\"[^a-zA-Z]\", \" \", x))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "id": "c7dc23a2",
    "metadata": {},
    "outputs": [
@@ -168,7 +166,7 @@
        "((17500, 1), (7500, 1))"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,25 +189,303 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
+   "id": "e7570758",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>sentiment</th>\n",
+       "      <th>review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"5814_8\"</td>\n",
+       "      <td>1</td>\n",
+       "      <td>With all this stuff going down at the moment ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>\"2381_9\"</td>\n",
+       "      <td>1</td>\n",
+       "      <td>The Classic War of the Worlds   by Timothy ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>\"7759_3\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>The film starts with a manager  Nicholas Bell...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>\"3630_4\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>It must be assumed that those who praised thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>\"9495_8\"</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Superbly trashy and wondrously unpretentious ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24995</th>\n",
+       "      <td>\"3453_3\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>It seems like more consideration has gone int...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24996</th>\n",
+       "      <td>\"5064_1\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>I don t believe they made this film  Complete...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24997</th>\n",
+       "      <td>\"10905_3\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Guy is a loser  Can t get girls  needs to bui...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24998</th>\n",
+       "      <td>\"10194_3\"</td>\n",
+       "      <td>0</td>\n",
+       "      <td>This    minute documentary Bu uel made in the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999</th>\n",
+       "      <td>\"8478_8\"</td>\n",
+       "      <td>1</td>\n",
+       "      <td>I saw this movie as a child and it broke my h...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              id  sentiment                                             review\n",
+       "0       \"5814_8\"          1   With all this stuff going down at the moment ...\n",
+       "1       \"2381_9\"          1     The Classic War of the Worlds   by Timothy ...\n",
+       "2       \"7759_3\"          0   The film starts with a manager  Nicholas Bell...\n",
+       "3       \"3630_4\"          0   It must be assumed that those who praised thi...\n",
+       "4       \"9495_8\"          1   Superbly trashy and wondrously unpretentious ...\n",
+       "...          ...        ...                                                ...\n",
+       "24995   \"3453_3\"          0   It seems like more consideration has gone int...\n",
+       "24996   \"5064_1\"          0   I don t believe they made this film  Complete...\n",
+       "24997  \"10905_3\"          0   Guy is a loser  Can t get girls  needs to bui...\n",
+       "24998  \"10194_3\"          0   This    minute documentary Bu uel made in the...\n",
+       "24999   \"8478_8\"          1   I saw this movie as a child and it broke my h...\n",
+       "\n",
+       "[25000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "review_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3e72dad0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        1\n",
+       "1        1\n",
+       "2        0\n",
+       "3        0\n",
+       "4        1\n",
+       "        ..\n",
+       "24995    0\n",
+       "24996    0\n",
+       "24997    0\n",
+       "24998    0\n",
+       "24999    1\n",
+       "Name: sentiment, Length: 25000, dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 영화평(review)의 Sentiment 결과 값(Target Label), 1은 긍정적 평가 0은 부정적 평가\n",
+    "class_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "c4fd7e6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>review</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>With all this stuff going down at the moment ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>The Classic War of the Worlds   by Timothy ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>The film starts with a manager  Nicholas Bell...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>It must be assumed that those who praised thi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Superbly trashy and wondrously unpretentious ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24995</th>\n",
+       "      <td>It seems like more consideration has gone int...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24996</th>\n",
+       "      <td>I don t believe they made this film  Complete...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24997</th>\n",
+       "      <td>Guy is a loser  Can t get girls  needs to bui...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24998</th>\n",
+       "      <td>This    minute documentary Bu uel made in the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24999</th>\n",
+       "      <td>I saw this movie as a child and it broke my h...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>25000 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                  review\n",
+       "0       With all this stuff going down at the moment ...\n",
+       "1         The Classic War of the Worlds   by Timothy ...\n",
+       "2       The film starts with a manager  Nicholas Bell...\n",
+       "3       It must be assumed that those who praised thi...\n",
+       "4       Superbly trashy and wondrously unpretentious ...\n",
+       "...                                                  ...\n",
+       "24995   It seems like more consideration has gone int...\n",
+       "24996   I don t believe they made this film  Complete...\n",
+       "24997   Guy is a loser  Can t get girls  needs to bui...\n",
+       "24998   This    minute documentary Bu uel made in the...\n",
+       "24999   I saw this movie as a child and it broke my h...\n",
+       "\n",
+       "[25000 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 정규표현식 적용한 review\n",
+    "feature_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "7fe05e4a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "예측 정확도는 0.8860, ROC-AUC는 0.9503\n"
+     ]
+    }
+   ],
    "source": [
     "# 감상평(Review) text를 피처 벡터화한 후 ML 분류 알고리즘을 적용해 예측 성능을 측정\n",
-    "\n",
+    "# Pipeline 객체를 이용해 두 가지를 한꺼번에 수행\n",
     "from sklearn.feature_extraction.text import CountVectorizer, TfidfVectorizer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "\n",
-    "# 스톱 워드는 English, filtering, ngram은 (1,2)로 설정해 CountVectorization수행. \n",
-    "# LogisticRegression의 C는 10으로 설정. \n",
+    "# 스톱 워드는 English, filtering, ngram은 (1,2)로 설정해 CountVectorization수행\n",
+    "# LogisticRegression의 C는 10으로 설정 \n",
     "pipeline = Pipeline([\n",
     "    ('cnt_vect', CountVectorizer(stop_words='english', ngram_range=(1,2) )),\n",
-    "    ('lr_clf', LogisticRegression(C=10, max_iter = 500))]) # C 값이 작으면 훈련을 덜 복잡 (강한 규제)\n",
+    "    ('lr_clf', LogisticRegression(C=10, max_iter = 500))]) # C 값이 작으면 훈련을 덜 복잡(강한 규제) -> 과소 적합\n",
     "\n",
-    "# Pipeline 객체를 이용하여 fit(), predict()로 학습/예측 수행. predict_proba()는 roc_auc때문에 수행.  \n",
+    "# Pipeline 객체를 이용하여 fit(), predict()로 학습/예측 수행. predict_proba()는 roc_auc때문에 수행\n",
     "pipeline.fit(X_train['review'], y_train)\n",
     "pred = pipeline.predict(X_test['review'])\n",
     "pred_probs = pipeline.predict_proba(X_test['review'])[:,1]\n",
@@ -220,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "0c683977",
    "metadata": {},
    "outputs": [
@@ -228,7 +504,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "예측 정확도는 0.4919, ROC-AUC는 0.5052\n"
+      "예측 정확도는 0.8936, ROC-AUC는 0.9598\n"
      ]
     }
    ],
@@ -293,13 +569,16 @@
     "                                                   target,\n",
     "                                                   test_size=0.3,\n",
     "                                                   random_state=42)\n",
+    "\n",
     "# Vectorizer인자로는 불용어 제거, ngram범위 설정해주기\n",
     "pipeline = Pipeline([('cnt_vect',CountVectorizer(stop_words='english',\n",
     "                                               ngram_range=(1,2))),\n",
     "                    ('lr_clf', LogisticRegression(C=10))])\n",
+    "\n",
     "# 위에서 설정해준 Pipleline으로 데이터 학습시킬 때는 벡터화시키기 전의 원본 데이터\n",
     "pipeline.fit(X_train, y_train)\n",
     "y_pred = pipeline.predict(X_test)\n",
+    "\n",
     "# '1' label로 예측될 확률 추출 for roc_auc_score\n",
     "y_pred_proba = pipeline.predict_proba(X_test)[:,1]\n",
     "acc = accuracy_score(y_test, y_pred)\n",
@@ -315,7 +594,7 @@
     "### 비지도 학습기반 감성분석\n",
     "- 다음은 감성어휘 사전을 이용해 비지도 학습에 기반한 방법이다. 여기서 감성어휘 사전이란, 어떤 단어가 긍정, 부정, 중립의 의미를 얼마나 지니고 있는지 백과사전 형태처럼 만들어 놓은 것을 말한다. 이를 기반으로 주어진 텍스트의 감성을 분석한다.<br><br>\n",
     "\n",
-    "- 감성 어휘 사전 기반의 감성분석에는 SentiWordNet, VADER, Pattern 등 방법이 존재한다. 이번 포스팅에서는 VADER에 대한 예시만 다룰 예정이다. 참고로 Pattern은 파이썬 3.x 버전부터는 호환이 되지 않는다고 한다.<br><br>\n",
+    "- 감성 어휘 사전 기반의 감성분석에는 SentiWordNet, VADER, Pattern 등 방법이 존재한다.\n",
     "\n",
     "- VADER는 소셜 미디어의 감성 분석 용도로 만들어졌다. NLTK에서 제공해주는 SentimentIntensityAnalyzer 객체를 통해 쉽게 감성 분석을 제공한다. \n",
     "    - 해당 클래스는 polarity_score() 메서드를 호출해 긍정, 부정, 중립 감성 지수를 구하고 이 3가지 지수를 적절히 조합해 계산한 총 감성 지수까지 계산하게 된다. \n",
@@ -356,7 +635,10 @@
     "senti_score = senti_analyzer.polarity_scores(review_df['review'][0])\n",
     "print(senti_score)\n",
     "\n",
-    "# 해당 코드를 출력하면 아래와 같은 dictionary 형태의 데이터가 보이는데, 여기서 compound의 value값이 총 감성 지수이다."
+    "# 해당 코드를 출력하면 아래와 같은 dictionary 형태의 데이터가 보이는데, 여기서 compound의 value값이 총 감성 지수이다.\n",
+    "# neg는 부정, neu는 중립, pos는 긍정, compound는  neg, meu, pos를 적절히 조합해 -1에서 1사이의 감성 지수를 표현한 값이다.\n",
+    "# compound score를 기반으로 부정 감성 또는 긍정 감성 여부를 결정한다.\n",
+    "# 보통 0.1 이상이면 긍정 감성 그 이하이면 부정 감성으로 판단하나 상황에 따라 임계값을 적절히 조정해 예측 성능을 조절한다."
    ]
   },
   {
@@ -382,27 +664,35 @@
     "from sklearn.metrics import accuracy_score, confusion_matrix, precision_score\n",
     "from sklearn.metrics import recall_score, f1_score\n",
     "\n",
+    "# SentimantIntensityAnalyzer 객체를 생성한 뒤 문서별로 polarity_scores() 메서드를 호출해 감성 점수를 구함 \n",
+    "# 해당 문서의 감성 점수가 특정 임계값 이상이면 긍정, 그렇지 않으면 부정으로 판단\n",
+    "\n",
     "# 임계치설정(보통 0.1)을 통해 compound(총 감성지수)가 임계치값보다 높으면 긍정, 낮으면 부정으로 분석\n",
-    "def get_sentiment(review, threshold):\n",
-    "    analyzer = SentimentIntensityAnalyzer()\n",
-    "    scores = analyzer.polarity_scores(review)\n",
+    "def get_sentiment(review, threshold): # 인자로 영화감상평 text와 임곗값 \n",
+    "    analyzer = SentimentIntensityAnalyzer() # 객체 생성\n",
+    "    scores = analyzer.polarity_scores(review) # 감성점수 구하기\n",
     "    \n",
     "    compound_score = scores['compound']\n",
+    "     # compound 값에 기반하여 threshold 입력값보다 크면 1, 그렇지 않으면 0을 반환 \n",
+    "     # lambda식은 반환값 if문 else문 순서임\n",
     "    final_sentiment = 1 if compound_score >= threshold else 0\n",
     "    return final_sentiment\n",
     "\n",
-    " # 각 텍스트 데이터에 위에서 설정한 감성 label 얻는 함수 적용하기\n",
+    "# 각 텍스트 데이터에 위에서 설정한 감성 label 얻는 함수 적용하기\n",
     "# 임계값은 0.1로 설정\n",
     "review_df['vader_pred'] = review_df['review'].apply(lambda x : get_sentiment(x, 0.1))\n",
     "# 원본 데이터에서 주어진 정답 label과 VADER로 예측한 label 비교\n",
-    "y_target = review_df['sentiment']\n",
-    "y_pred = review_df['vader_pred']\n",
+    "y_target = review_df['sentiment'] # 정답 label\n",
+    "y_pred = review_df['vader_pred'] # 감성분석할 텍스트 데이터\n",
     "\n",
     "print(confusion_matrix(y_target, y_pred))\n",
     "print(\"정확도 :\", accuracy_score(y_target, y_pred))\n",
     "print(\"정밀도 :\", precision_score(y_target, y_pred))\n",
     "print(\"재현율 :\", recall_score(y_target, y_pred))\n",
-    "print(\"F1 score :\", f1_score(y_target, y_pred))"
+    "print(\"F1 score :\", f1_score(y_target, y_pred))\n",
+    "\n",
+    "# 감성 사전을 이용한 감성 분석 예측 성능은 지도 학습 분류 기반의 예측 성능에 비해 낮은 수준이지만\n",
+    "# 결정 클래스 값이 없는 상황이라면 충분히 만족할만한 성능을 보인다"
    ]
   }
  ],
