--- a/m3_통계/stat1_복습.ipynb
+++ b/m3_통계/stat1_복습.ipynb
@@ -327,7 +327,7 @@
     "print(n)\n",
     "# print(7//3) 몫 구하기\n",
     "if n % 2 == 0: # 길이가 짝수면  \n",
-    "    m0 = sorted_scores[n//2 - 1] #  n이 전체 길이가 10이므로  절반에 -1 한 값을 mo에 담고\n",
+    "    m0 = sorted_scores[n//2 - 1] #  n이 전체 길이가 10이므로  절반에 -1 한 값을 m0에 담고\n",
     "    m1 = sorted_scores[n//2] #  절반값을 m1에 담아라\n",
     "    median = (m0 + m1) / 2  # 절반에 -1한값이랑 절반값을 더하고 / 그 개수인 2로 나누면 -> 중앙값이니까\n",
     "else: # 홀수면\n",
@@ -3247,7 +3247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 1,
    "id": "e5dae77f",
    "metadata": {},
    "outputs": [
@@ -3314,7 +3314,7 @@
        "3  osaka   red      9"
       ]
      },
-     "execution_count": 177,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
