--- a/m3_통계/stat3_복습.ipynb
+++ b/m3_통계/stat3_복습.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "80c94582",
    "metadata": {},
    "outputs": [],
@@ -166,17 +166,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "6a607f2c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 확률함수는 확률변수 X가 x가 될 때의 확률을 반환하는 함수 이지만,\n",
+    "# 확률함수는 확률변수 X가 x가 될 때의 확률을 반환하는 함수이지만,\n",
     "# 확률변수 X가 x이하가 될때의 확률을 반환하는 함수로도 자주 사용된다.\n",
     "# 이와 같은 함수 f(x)를 누적분포함수 또는 분포함수라 한다. -> 특정확률변수까지의 합계\n",
     "def F(x):\n",
     "    return np.sum([f(x_k) for x_k in x_set if x_k <= x])\n",
     "# prob = np.array([f(x_k) for x_k in x_set]) 처음에 만들어준 확률변수"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b24a5a94",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2857142857142857"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "F(3) # 확률변수 X가 3이하가 될 확률 -> 3까지의 확률값의 합"
    ]
   },
   {
@@ -202,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "c4279031",
    "metadata": {},
    "outputs": [
@@ -217,7 +238,7 @@
        " 15: 0.2857142857142857}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -250,22 +271,23 @@
    "source": [
     "# 1차원 이산형 확률변수의 지표\n",
     "# 확률 변수의 평균 : 확률변수의 평균은 확률변수의 중심을 나타내는 지표가 되며 기댓값이라고도 부름\n",
-    "np.sum([x_k * f(x_k) for x_k in x_set])"
+    "# 이산형 확률변수 -> 확률변수의 평균은 확률변수가 취할 수 있는 값과 그 확률의 곱의 총합으로 정의\n",
+    "np.sum([x_k * f(x_k) for x_k in x_set]) # x_k가 확률변수 * 그 확률변수의 확률"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "f22577ff",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "4.331934"
+       "4.333316"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -373,7 +395,7 @@
    "source": [
     "# 분산\n",
     "mean = E(X)\n",
-    "np.sum([(x_k - mean)**2 * f(x_k) for x_k in x_set])"
+    "np.sum([(x_k - mean)**2 * f(x_k) for x_k in x_set]) # 편차제곱의 기댓값"
    ]
   },
   {
@@ -888,7 +910,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 공분산\n",
+    "# 공분산 -> 2개의 확률변수 X,Y 사이에 어느 정도 상관이 있는지 확인\n",
     "def Cov(XY):\n",
     "    x_set, y_set, f_XY = XY\n",
     "    mean_Y = E(XY, lambda x,y: y)\n",
@@ -997,11 +1019,11 @@
     "\n",
     "linestyles = ['-','--',':']\n",
     "\n",
-    "def E(X,g=lambda x:x):\n",
+    "def E(X,g=lambda x:x): # 기댓값\n",
     "    x_set, f =X\n",
     "    return np.sum([g(x_k) * f(x_k) for x_k in x_set])\n",
     "\n",
-    "def V(X, g=lambda x:x):\n",
+    "def V(X, g=lambda x:x): #분산\n",
     "    x_set, f =X\n",
     "    mean_X = E(X,g)\n",
     "    return np.sum([(g(x_k)-mean_X)**2 *f(x_k) for x_k in x_set])\n",
@@ -1064,7 +1086,7 @@
    "outputs": [],
    "source": [
     "# Bern(0.3)을 따르는 확률변수 x를 작성\n",
-    "p = 0.3 # 성공할 확률이 0.3\n",
+    "p = 0.3 # 성공할 확률이 0.3 = 기댓값\n",
     "X = Bern(p)\n",
     "X"
    ]
@@ -1078,7 +1100,7 @@
    "source": [
     "# 기댓값과 분산 계산 \n",
     "# 기댓값 0.3\n",
-    "# 분산 0.3 * 0.7 = 0.21 \n",
+    "# 분산 0.3 * 0.7 = 0.21 -> 성공할 확률 * 실패할 확률 \n",
     "check_prob(X)"
    ]
   },
@@ -1205,7 +1227,7 @@
    "source": [
     "check_prob(X)\n",
     "# 기댓값은 전체 시행 횟수(10) * 성공확률(0.3) = 기댓값(3)\n",
-    "# 분산은 전체 시앻 횟수 (10) * 성공확률(0.3) * 실패확률(0.7) = 분산(2.1) "
+    "# 분산은 전체 시행 횟수 (10) * 성공확률(0.3) * 실패확률(0.7) = 분산(2.1) "
    ]
   },
   {
@@ -1235,16 +1257,16 @@
     "x_set = np.arange(n+1)\n",
     "for p ,ls in zip([0.3 ,0.5, 0.7], linestyles):\n",
     "    rv = stats.binom(n,p)\n",
-    "    ax.plot(x_set, rv.pmf(x_set), label=f'p:{p}', ls=ls, color='k')\n",
+    "    ax.plot(x_set, rv.pmf(x_set), label=f'p:{p}', ls=ls, color='k') # pmf 확률질량함수\n",
     "    \n",
     "ax.set_xticks(x_set)\n",
     "ax.legend()\n",
     "plt.show()\n",
-    "# p=0.5일 때 좌우대칭 형태로 분포하고 -> (정규분포)\n",
+    "# p = 0.5일 때 좌우대칭 형태로 분포하고 -> (정규분포)\n",
     "# p = 0.3과 p = 0.7 대칭 관계에 있다는 것을 확인\n",
-    "# p = 0.5일 때는 좌우 대칭으로 중앙에서 높은 확률을 갖게 되며, \n",
-    "# p=0.3인 경우에는 작은 값 쪽에 확률이 치우쳐 있는 것을 볼 수 있다. \n",
-    "# 반대로 p=0.9인 경우에는 큰 값에 확률이 치우쳐 있는데, p=0.3보다 더욱 끝 쪽으로 치우쳐 있는 것을 볼 수 있다."
+    "# p가 커질수록, 정상이 되는 값이 커진다.\n",
+    "# p = 0.3인 경우에는 작은 값 쪽에 확률이 치우쳐 있는 것을 볼 수 있다. \n",
+    "# 반대로 p = 0.9인 경우에는 큰 값에 확률이 치우쳐 있는데, p = 0.3보다 더욱 끝 쪽으로 치우쳐 있는 것을 볼 수 있다."
    ]
   },
   {
@@ -1304,8 +1326,8 @@
     "# [과제] 성공확률이 0.5일때 기하분포의 기댓값과 분산을 구하세요.\n",
     "p = 0.5      # p는 베르누이시행의 성공확률파라미터\n",
     "X = Ge(p)\n",
-    "print(\"기하분포의 기댓값: \", 1/0.5)    #기하분포의 기댓값은 1/p\n",
-    "print(\"기하분포의 분산: \", (1-0.5)/0.5**2)   #분산은 (1-p)/p^2"
+    "print(\"기하분포의 기댓값: \", 1/0.5)    # 기하분포의 기댓값은 1/p\n",
+    "print(\"기하분포의 분산: \", (1-0.5)/0.5**2)   # 분산은 (1-p)/p^2"
    ]
   },
   {
@@ -1435,7 +1457,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# [과제] 사용자 함수를 구하세요.(단, 확를변수를 1 이상 19 이하인 정수으로 설정)\n",
+    "# [과제] 사용자 함수를 구하세요.(단, 확를변수를 19이하인 정수으로 설정)\n",
     "import math\n",
     "\n",
     "def Poi(lam):\n",
@@ -1456,7 +1478,7 @@
    "outputs": [],
    "source": [
     "# 팩토리얼 x!은 scipy.special의 factorial을 사용 \n",
-    "# 취할 수 있는 값은 0 이상인 정수 전부지만 구현의 편의상 19 이하인 정수로 설정\n",
+    "# 취할 수 있는 값은 0 이상인 정수 전부지만 구현의 편의상 19이하인 정수로 설정\n",
     "from scipy.special import factorial\n",
     "\n",
     "def Poi(lam):\n",
@@ -3198,7 +3220,7 @@
     "#### 카이제곱분포 -> 표준정규분포를 가지고 사용\n",
     "- n개의 표준정규분포가 서로 독립이여야함\n",
     "- 카이제곱분포는 -> 각각의 정규분포를 자승한것을 모두 더하면 카이제곱분포\n",
-    "- $Z_1, Z_2, ... Z_n$이 서로 독립이고 N(0,1)을 따르고 있을 때 그 제곱합의 확률분포을 자유도가 n인 카이제곱분포라고 한다.\n",
+    "- $Z_1, Z_2, ... Z_n$이 서로 독립이고 N(0,1)을 따르고 있을 때 그 제곱합의 확률분포를 자유도가 n인 카이제곱분포라고 한다.\n",
     "- 카이제곱분포는 분산의 구간 추정이나 독립성 검정에서 사용되는 확률분포이다.-> 독립적으로 만들었으므로\n",
     "- 좌우비대칭으로 왼쪽으로 치우치고 오른쪽으로 넓어진다.\n",
     "- 자유도가 커지면 좌우대칭에 가까워진다.\n",
