--- a/m8_머신러닝적용/ML_문서 군집화.ipynb
+++ b/m8_머신러닝적용/ML_문서 군집화.ipynb
@@ -125,7 +125,7 @@
     "    filename_ = file_.split('\\\\')[-1] # \\\\로 분리\n",
     "    filename = filename_.split('.')[0] # 점으로 분리\n",
     "\n",
-    "    # 빈 그릇 만들어놓은 filne_list에 append함수 이용해 파일명과 파일 내용 뿌려줌\n",
+    "    # 빈 그릇 만들어놓은 filename_list에 append함수 이용해 파일명과 파일 내용 뿌려줌\n",
     "    filename_list.append(filename)\n",
     "    opinion_text.append(df.to_string())\n",
     "\n",
